--- a/signup.html
+++ b/signup.html
@@ -57,7 +57,7 @@
                                 <span class="input input--ruri">
                                     <input class="input__field input__field--ruri" type="text" id="input-26" />
                                     <label class="input__label input__label--ruri" for="input-26">
-                                        <span class="input__label-content input__label-content--ruri">البريد الإلكتروني <strong>*</strong></span>
+                                        <span class="input__label-content input__label-content--ruri"><span class="sep">(*)</span>  البريد الإلكتروني </span>
                                     </label>
                                 </span>
                             </div>
@@ -65,7 +65,7 @@
                                 <span class="input input--ruri">
                                     <input class="input__field input__field--ruri" type="text" id="input-26" />
                                     <label class="input__label input__label--ruri" for="input-26">
-                                        <span class="input__label-content input__label-content--ruri">كلمة المرور  <strong>*</strong></span>
+                                        <span class="input__label-content input__label-content--ruri"><span class="sep">(*)</span> كلمة المرور </span>
                                     </label>
                                 </span>
                             </div>
@@ -73,7 +73,7 @@
                                 <span class="input input--ruri">
                                     <input class="input__field input__field--ruri" type="text" id="input-26" />
                                     <label class="input__label input__label--ruri" for="input-26">
-                                        <span class="input__label-content input__label-content--ruri">كلمة المرور مرة أخرى <strong>*</strong></span>
+                                        <span class="input__label-content input__label-content--ruri"><span class="sep">(*)</span> كلمة المرور مرة أخرى</span>
                                     </label>
                                 </span>
                             </div>
@@ -81,7 +81,7 @@
                                 <span class="input input--ruri">
                                     <input class="input__field input__field--ruri" type="text" id="input-26" />
                                     <label class="input__label input__label--ruri" for="input-26">
-                                        <span class="input__label-content input__label-content--ruri">اعادة كلمة المرور  <strong>*</strong></span>
+                                        <span class="input__label-content input__label-content--ruri"><span class="sep">(*)</span> اعادة كلمة المرور </span>
                                     </label>
                                 </span>
                             </div> -->
