--- a/text.html
+++ b/text.html
@@ -16,10 +16,10 @@
         <link rel="stylesheet" href="css/css.css">
         <link rel="stylesheet" href="css/converted-files/font.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
-        <!-- <link rel="stylesheet" type="text/css" href="TextInputEffects/css/set1.css"> -->
-        <link rel="stylesheet" type="text/css" href="TextInputEffects/css/set2.css">
+        <link rel="stylesheet" type="text/css" href="TextInputEffects/css/set1.css">
+        <!-- <link rel="stylesheet" type="text/css" href="TextInputEffects/css/set2.css"> -->
     </head>
-    <body class="signin">
+    <body class="contact textpage">
         <!-- <div class="signin"></div> -->
         <nav class="navbar navbar-default" id="menu">
             <div class="container">
@@ -42,54 +42,19 @@
             </div>
         </nav>
         <div class="container smart_page" id="main-container" style="min-height: 624px;">
-            <div id="uploader_container"></div>
-            <div id="membership_page">
-                <div class="member_form">
-                    <div class="form-title text-center">
-                        <div class="user">
-                            <img src="user.png">
-                        </div>
-                        <h1>تسجيل الدخول</h1>
-                    </div>
-                    <form action="https://soundeals.com/users/invitation_submit" role="form" class="check_submit" id="invitation_form" method="post" accept-charset="utf-8">
-                        <input type="hidden" name="csrf_token" value="54aef55cd3eee38c028c06608a0014ed">
-                        <div class="form-body">
-                            <div class="form-group">
-                                <span class="input input--ruri">
-                                    <input class="input__field input__field--ruri" type="text" id="input-26" />
-                                    <label class="input__label input__label--ruri" for="input-26">
-                                        <span class="input__label-content input__label-content--ruri"><span class="sep">(*)</span> البريد الإلكتروني</span>
-                                    </label>
-                                </span>
-                            </div>
-                            <div class="form-group">
-                                <span class="input input--ruri">
-                                    <input class="input__field input__field--ruri" type="text" id="input-26" />
-                                    <label class="input__label input__label--ruri" for="input-26">
-                                        <span class="input__label-content input__label-content--ruri"><span class="sep">(*)</span> كلمة المرور </span>
-                                    </label>
-                                </span>
-                            </div>
-                            <!-- <div class="form-group">
-                                <span class="input input--ruri">
-                                    <input class="input__field input__field--ruri" type="text" id="input-26" />
-                                    <label class="input__label input__label--ruri" for="input-26">
-                                        <span class="input__label-content input__label-content--ruri"><span class="sep">(*)</span> اعادة كلمة المرور </span>
-                                    </label>
-                                </span>
-                            </div> -->
-                        </div>
-                        <div class="form-sumbit">
-                            <button class="btn btn-block submit_button" type="submit"><i class="fa loading-icon"></i> دخول</button>
-                        </div>
-                        <div class="form-tools nice-font-2">
-                            <div class="row">
-                                <div class="col-xs-6"> <a href="https://soundeals.com/forget-password">نسيت كلمة المرور ؟</a> </div>
-                                <div class="col-xs-6 text-left"> <a href="https://soundeals.com/re-activate">ليس لديك حساب ؟</a> </div>
-                            </div>
-                        </div>
-                    </form>
+            <div class="fields">
+                <div class="form-title text-center">
+                    <h1> فوائد التبرع العلمية  </h1>
                 </div>
+                <p class="text">
+ تنشط نخاع عظام المتبرع لإنتاج خلايا دم جديدة ( كريات حمراء وكريات بيضاء وصفائح دموية ) .
+المساعدة في تنشيط الدورة الدموية .<br>
+علاج بعض الحالات المرضية مثل الزيادة غير الطبيعية في عدد كريات الدم الحمراء ونسبة الحديد ومنع حدوث مضاعفات هذه الأمراض .
+منح المتبرع فرصة التأكيد من خلوه من الأمراض ( الالتهاب الكبدي بأنواعه وسرطان الدم والزهري والإيدز وغيرها ) .
+ثبت أنه في كل مرة تتبرع بالدم فإنك تتخلص من بعض الحديد الذى يحتويه والذى إذا ما ارتفع مستواه بالدم يزيد من مخاطر الاصابة بامراض القلب ، كما أن الحديد يعجل باكسدة الكوليستيرول ويزيد من تلف الشراين الصغيرة .<br>
+إن الذين يتبرعون بدمهم مرة واحدة على أقل كل سنة هم أقل تعرضا للإصابة بأمراض الدورة الدموية و سرطان الدم .<br>
+التبرع بالدم ينشط النخاع العظمى (وهو المسؤول الوحيد فى الجسم عن تكوين خلايا الدم), فبينما يتجدد دم الإنسان طبيعيا كل 120 يوما, فإن الإنسان الذى يتبرع يتجدد دمه بعد  20 يوما فقط أى أسرع بستة أضعاف، كما أن خلايا الدم الجديدة أنشط فى نقل الأكسجين إلى أعضاء الجسم, مما يؤدى إلى زيادة النشاط والحيوية. فكأن الله يبدل المتبرع بكيس دم أفضل مما تبرع به .
+                </p>
             </div>
         </div>
         <div class="footer container-fluid">
