--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         <div class="container-fluid">
             <div class="banner row">
                 <div class="text-center account_buttons">
-                    <a class="btn"><i class="fa fa-sign-in"></i> تسجيل الدخول</a>
-                    <a class="btn "><i class="fa fa-user"></i> حساب جديد</a>
+                    <a href="signup.html" class="btn"><i class="fa fa-sign-in"></i> تسجيل الدخول</a>
+                    <a href="signin.html" class="btn "><i class="fa fa-user"></i> حساب جديد</a>
                 </div>
 
                 <!-- <img src="shutterstock_560320879.png" class="fadedbg img-responsive" alt=""> -->
@@ -39,7 +39,7 @@
                 <div class="text-center button">
                     <p>تبرعك بالدم... قد ينقذ حياة مريض بحاجته</p>
                     <!-- <p class="quran">{{وَمَنْ أَحْيَاهَا فَكَأَنَّمَا أَحْيَا النَّاسَ جَمِيعًا...}}</p> -->
-                    <a class="btn btn-embossed btn-hg btn-danger btn-wide"> كن من المتبرعين
+                    <a  href="form.html" class="btn btn-embossed btn-hg btn-danger btn-wide"> كن من المتبرعين
                     </a>
                 </div>
             </div>
@@ -181,7 +181,7 @@
                     إدعمنا بالدعاء لنا بظهر الغيب.
                 </p>
                 <p>
-                    <a href="#" title="للمزيد من المعلومات...">للمزيد من المعلومات...</a>
+                    <a href="text.html" title="للمزيد من المعلومات...">للمزيد من المعلومات...</a>
                 </p>
             </div>
         </div>
@@ -190,7 +190,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <hr>
-                        <p><a href="#">الرئيسية</a> | <a href="#">فوائد التبرع العلمية</a> | <a href="#">ثواب التبرع</a> | <a href="#">من نحن</a> | <a href="#">ادعمنا</a> | <a href="#">راسلنا </a> | <a href="#"> الخصوصية</a></p>
+                        <p><a href="#">الرئيسية</a> | <a href="#">فوائد التبرع العلمية</a> | <a href="#">ثواب التبرع</a> | <a href="#">من نحن</a> | <a href="#">ادعمنا</a> | <a href="contact.html">راسلنا </a> | <a href="#"> الخصوصية</a></p>
                     </div>
                 </div>
             </div>
